Content.Tests/DMProject/Tests/Tree/Const/const_fn_badarg2.dm
// COMPILE ERROR

/proc/somered()
	return 127

/proc/RunTest()
	var/const/reddish = rgb(somered(),0,0) // error: constant initializer required
